# exchange-project

api/: package-lock.json  package.json
api/src/routes/: kline.ts  ticker.ts  trades.ts
engine/: snapshot.json
engine-c++/: CMakeLists.txt  Makefile  README.md
engine-c++/include/: engine.hpp  orderbook.hpp  redis_client.hpp  redis_protocol.hpp  types.hpp
engine-c++/src/: engine.cpp  main.cpp  orderbook.cpp  redis_client.cpp  redis_protocol.cpp
engine-c++/tests/: engine_tests.cpp  orderbook_tests.cpp
frontend/app/utils/: httpClient.ts
